RESOLVED FIXED61831
Frame flattening shouldn't be applied to iframes that have a zero size
https://bugs.webkit.org/show_bug.cgi?id=61831
Summary Frame flattening shouldn't be applied to iframes that have a zero size
David Carson
Reported 2011-05-31 17:58:56 PDT
If the author of the content specifically set the iframe size to zero, then the frame should not be resized. eg: <iframe src="/fd/fb/r?v=6_12_0_776292&amp;sId=0" height="0" width="0"></iframe> This issue can be seen on the Bing site.
Attachments
proposed patch and test case (5.45 KB, patch)
2011-05-31 21:37 PDT, David Carson
koivisto: review-
Same code patch with updated platform independent test case (4.93 KB, patch)
2011-06-01 09:24 PDT, David Carson
koivisto: review+
Same patch and test cases as before, but this time with a corrected LayoutTests/ChangeLog (4.91 KB, patch)
2011-06-01 10:34 PDT, David Carson
no flags
David Carson
Comment 1 2011-05-31 21:37:28 PDT
Created attachment 95545 [details] proposed patch and test case
Antti Koivisto
Comment 2 2011-06-01 07:20:12 PDT
Comment on attachment 95545 [details] proposed patch and test case The test results should be platform independent (use layoutTestController.dumpAsText()). r- for that. The patch itself looks good. I'm pretty sure we were not flattening zero-sized frames in the past, wonder how that got lost?
David Carson
Comment 3 2011-06-01 07:38:52 PDT
The way the test stands today, it clearly shows that the iframe is not flattened as we dump the DOM sizes. Changing to layoutTestController.dumpAsText(), I'll need to use script to grab the element sizes and print them.
David Carson
Comment 4 2011-06-01 09:24:42 PDT
Created attachment 95612 [details] Same code patch with updated platform independent test case
David Carson
Comment 5 2011-06-01 10:34:34 PDT
Created attachment 95621 [details] Same patch and test cases as before, but this time with a corrected LayoutTests/ChangeLog
WebKit Commit Bot
Comment 6 2011-06-01 14:42:55 PDT
Comment on attachment 95621 [details] Same patch and test cases as before, but this time with a corrected LayoutTests/ChangeLog Clearing flags on attachment: 95621 Committed r87853: <http://trac.webkit.org/changeset/87853>
WebKit Commit Bot
Comment 7 2011-06-01 14:43:00 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 8 2011-06-02 07:45:43 PDT
Revision r87853 cherry-picked into qtwebkit-2.2 with commit 695e84c <http://gitorious.org/webkit/qtwebkit/commit/695e84c>
Note You need to log in before you can comment on or make changes to this bug.