2011-06-01  David Carson  <dacarson@apple.com>

Reviewed by Antti Koivisto.

        Don't flatten frames that have a zero size.
        https://bugs.webkit.org/show_bug.cgi?id=61831

        This tests creates an iframe that has a width and height of zero
        and ensures that the iframe is not flattened to the size of the
        containing content.

        * fast/frames/flattening/iframe-flattening-fixed-width-and-height-zero-size.html: Added.
        * fast/frames/flattening/iframe-flattening-fixed-width-and-height-zero-size-expected.txt: Added.
2011-06-01  David Carson  <dacarson@apple.com>

        Reviewed by Antti Koivisto.

        https://bugs.webkit.org/show_bug.cgi?id=61831
        If width and height of an iframe is fixed and should not be visible, then
        it shouldn't be flattened.

        Test: fast/frames/flattening/iframe-flattening-fixed-width-and-height-zero-size.html

        * rendering/RenderIFrame.cpp:
        (WebCore::RenderIFrame::flattenFrame): add a check for a zero width or height

Canonical link: https://commits.webkit.org/77329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87853 268f45cc-cd09-0410-ab3c-d52691b4dbfc